# Mafia2

./: CMakeLists.txt  README.md  conanfile.txt
client/: CMakeLists.txt
client/include/: client.h  message.h
client/src/: client.cpp  main.cpp
server/: CMakeLists.txt
server/include/: game.h  game_state.h  message.h  player.h  request_handler.h  room.h  server.h  session.h
server/resource/: word.txt
server/src/: game.cpp  game_state.cpp  main.cpp  player.cpp  request_handler.cpp  room.cpp  server.cpp  session.cpp
